--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -89,25 +89,25 @@ input:focus {
   width: 16px;
   height: 16px;
   border-radius: 10px;
-  background: #B51B1B;
-  border-color: #EF4040;
+  background: #b51b1b;
+  border-color: #ef4040;
   animation: move 3s linear infinite alternate;
 }
 
 img {
   width: 100%;
-  height: 200px;
 }
 
 .card {
-  width: 360px;
   border: 1px solid #808080;
+  width: calc((100% - 48px) / 3);
+  box-sizing: border-box;
 }
 
 .card-info {
   display: flex;
   justify-content: space-around;
- }
+}
 
 .description {
   display: flex;
@@ -119,6 +119,6 @@ img {
   flex-wrap: wrap;
   gap: 24px;
   margin-top: 32px;
-  justify-content: center;
+  justify-content: space-between;
 }
 
